<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>deletemember</class>
 <widget class="QMainWindow" name="deletemember">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>431</width>
    <height>347</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>MainWindow</string>
  </property>
  <widget class="QWidget" name="centralwidget">
   <layout class="QVBoxLayout" name="verticalLayout">
    <item>
     <layout class="QGridLayout" name="gridLayout_3">
      <item row="3" column="0">
       <widget class="QLineEdit" name="lineEdit_7"/>
      </item>
      <item row="1" column="0">
       <widget class="QLineEdit" name="lineEdit_6"/>
      </item>
      <item row="9" column="0">
       <widget class="QLineEdit" name="lineEdit_5"/>
      </item>
      <item row="8" column="0">
       <widget class="QLabel" name="label_9">
        <property name="styleSheet">
         <string notr="true">QLabel{
	font: 600 14pt &quot;Zilla Slab SemiBold&quot;;
	color: rgb(0, 0, 0);
}</string>
        </property>
        <property name="text">
         <string>Phone Number</string>
        </property>
       </widget>
      </item>
      <item row="0" column="0">
       <widget class="QLabel" name="label_8">
        <property name="styleSheet">
         <string notr="true">QLabel{
	font: 600 14pt &quot;Zilla Slab SemiBold&quot;;
	color: rgb(0, 0, 0);
}</string>
        </property>
        <property name="text">
         <string>First Name</string>
        </property>
       </widget>
      </item>
      <item row="2" column="0">
       <widget class="QLabel" name="label_6">
        <property name="styleSheet">
         <string notr="true">QLabel{
	font: 600 14pt &quot;Zilla Slab SemiBold&quot;;
	color: rgb(0, 0, 0);
}</string>
        </property>
        <property name="text">
         <string>Last Name</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item>
     <widget class="QFrame" name="frame">
      <property name="frameShape">
       <enum>QFrame::StyledPanel</enum>
      </property>
      <property name="frameShadow">
       <enum>QFrame::Raised</enum>
      </property>
      <layout class="QGridLayout" name="gridLayout_4">
       <item row="3" column="0">
        <widget class="QPushButton" name="pushButton_4">
         <property name="styleSheet">
          <string notr="true">QPushButton{
	background-color: rgb(226, 226, 226);
	color: rgb(0, 0, 0);
	font: 700 11pt &quot;Segoe UI&quot;;
}</string>
         </property>
         <property name="text">
          <string>Cancel</string>
         </property>
        </widget>
       </item>
       <item row="2" column="0">
        <widget class="QPushButton" name="pushButton_3">
         <property name="styleSheet">
          <string notr="true">QPushButton{
	background-color: rgb(226, 226, 226);
	color: rgb(0, 0, 0);
	font: 700 11pt &quot;Segoe UI&quot;;
}</string>
         </property>
         <property name="text">
          <string>Delete Member</string>
         </property>
        </widget>
       </item>
      </layout>
     </widget>
    </item>
   </layout>
  </widget>
  <widget class="QMenuBar" name="menubar">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
     <width>431</width>
     <height>21</height>
    </rect>
   </property>
  </widget>
  <widget class="QStatusBar" name="statusbar"/>
 </widget>
 <resources/>
 <connections/>
</ui>
